--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,15 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+# Show SQL queries during run
+spring.jpa.show-sql=true
+# Make those queries prettier
+#spring.jpa.properties.hibernate.format_sql=true
+
+# Values used in the creation/verification of JWTs
+auth.token.issuer=BenStrathdee
+auth.token.auth=AuthToken
+auth.token.authExpiry=600
+auth.token.refresh=RefreshToken
+auth.token.refreshExpiry=86400
+auth.token.fingerprint=fingerprint
